--- a/4-Word-Embedding/4-Word-Embedding-Supplemental.ipynb
+++ b/4-Word-Embedding/4-Word-Embedding-Supplemental.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -653,6 +653,24 @@
     "## <span style=\"color:red\">*Exercise 3b*</span>\n",
     "\n",
     "<span style=\"color:red\">**Do only 3a or 3b.** Construct cells immediately below this that align word embeddings over time or across domains/corpora. Interrogate the spaces that result and ask which words changed most and least over the entire period or between contexts/corpora. What does this reveal about the social game underlying your space? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trump2_model  = gensim.models.word2vec.Word2Vec.load('../4-Word-Embedding/trumpW2V')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = trump2_model.wv.index2word"
    ]
   },
   {
