--- a/5-Reliability/5-Reliability-Zhaodi Chen.ipynb
+++ b/5-Reliability/5-Reliability-Zhaodi Chen.ipynb
@@ -3494,8 +3494,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the graph above, coder1 has the highest accuracy which code2 has the lowest accuracy. Code0 and coder1 are closer than their distance with coder2 respectively. This result is consistent with our findings above. Therefore, we can say that coder1 and coder0 are more reliable coder in this case. However, sample size with 3 coders is very small, so in order to increase th"
+    "According to the graph above, coder1 has the highest accuracy which code2 has the lowest accuracy. Code0 and coder1 are closer than their distance with coder2 respectively. This result is consistent with our findings above. Therefore, we can say that coder1 and coder0 are more reliable coder in this case. However, sample size with 3 coders is very small, so in order to increase the accuracy about our evaluation about coding, more coders are needed."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
