--- a/6-Classification/6-Classification.ipynb
+++ b/6-Classification/6-Classification.ipynb
@@ -7290,7 +7290,8 @@
     "1) **low-quality of the hand coded data** that I used for fit the model. The coding of sentiment is conducted by three MTurk workers and I chose the classifications of the best-performed coder, based on the evaluation of coders from last week's homework. However, the criteria of sentiment can be ambiguous, so it is hard to get a reasonable classification based on 3 coders. In addition, workers in MTruk are not professional coders. So the quality of coding can be doubtful. \n",
     "\n",
     "2) The unbalanced distribution of categories. The sample in positive category are too rare and far less than the other two categories, especially to the neutral category, which caused difficulty in classification.\n",
-    "To improve the performance of classification, higher quality of hand coding is needed. "
+    "\n",
+    "Therefore, to improve the performance of classification, higher quality of hand coding is needed. Also, we can add some new sample which belongs to positive category."
    ]
   },
   {
